k8s/bootstrap/base/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: vista-ingress-gateway
spec:
  selector:
    app: istio-ingress
  servers:
    - hosts:
        - "HTTP_PLACE_HOLDER"
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
    - hosts:
        - "HTTPS_PLACE_HOLDER"
      port:
        name: https
        number: 443
        protocol: HTTP
