k8s/bootstrap/base/istio/virtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: vista-virtual-service
spec:
  hosts:
    - placeholder
  gateways:
    - placeholder
  http:
    # Block any request to /ndtp-python/api/graphql or URLs starting with it
    - match:
        - uri:
            prefix: /ndtp-python/api/graphql
      fault:
        abort:
          httpStatus: 403
          percentage:
            value: 100
    - match:
        - uri:
            prefix: /ndtp-python/
      rewrite:
        uri: "/"
      route:
        - destination:
            host: vista-python-api
            port:
              number: 80
    - match:
        - uri:
            prefix: /vista/
      rewrite:
        uri: "/"
      route:
        - destination:
            host: smart-cache-vista-api
            port:
              number: 80
    - match:
        - uri:
            prefix: /transparent-proxy/
      rewrite:
        uri: "/"
      route:
        - destination:
            host: vista-transparent-proxy
            port:
              number: 80
    - match:
        - uri:
            prefix: /
      rewrite:
        uriRegexRewrite:
          match: ^/(/|$)(.*)
          rewrite: /\2
      route:
        - destination:
            host: vista-frontend
            port:
              number: 80
